tests/ui/opts/19_param_const.stderr
error: cannot implement FuncMap over const generic
 --> tests/ui/opts/19_param_const.rs:4:18
  |
4 | #[funcmap(params(N))]
  |                  ^
