tests/ui/opts/19_param_const.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
#[funcmap(params(N))]
struct Test<T, const N: usize>(T);

fn main() {}
